# beyond-the-resume

./: .gitignore  README.md  chainlit.md  chainlit.toml  pyproject.toml
.chainlit/: config.toml
app/: app_methods.py
app/engine/: engine.py  model.py
